# rinformer

./: .gitignore  README.md  pyproject.toml
src/rinformer/: main.py
src/rinformer/model/: __init__.py  air_quality.py  service.py  weather.py  youtube.py
