[project]
name = "rinformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-api-python-client>=2.196.0",
    "requests>=2.34.2",
]

[tool.uv]
package=true

[project.scripts]
# command_name = "package.module:function"
check-aqi = "rinformer.main:main"
